Flinging stops after navigation.

This cl calls stopFling after navigation to make sure that flinging does
not continue after navigation when the new page is using the same renderer.

Bug: 835289
Test: BrowserSideFlingBrowserTest.FlingingStopsAfterNavigation
Change-Id: I9f43689ec375605ab1c3ba38adf1df9d46b3efa5
Reviewed-on: https://chromium-review.googlesource.com/1244374
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Sahel Sharify <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595560}
Former-commit-id: 81c88f718627b281027e55c48504e1b8f84b7d47